# fod

./: .gitignore  Cargo.toml  README.md  Rocket.toml  db.drawio  package-lock.json  package.json  webpack.config.js
auth/: Cargo.toml
client/: Cargo.toml  package.json  webpack.config.js
client/js/: feather-icons.js  index.js
client/src/: components.rs  lib.rs  models.rs
client/src/pages/: mod.rs
client/src/pages/create_user/: components.rs  mod.rs
client/src/pages/home/: components.rs  mod.rs
client/src/pages/login/: components.rs  mod.rs
client/src/subpages/: hunger_modal.rs  mod.rs  navbar.rs  notification.rs
client/static/: index.html
common/: Cargo.toml
common/src/: lib.rs
exercise/: Cargo.toml
food/: Cargo.toml
js/: food.js  index.js  meal.js  modal.js  modals.js  nav.js  notification.js
metrics/: Cargo.toml
migrations/2020-02-22-063839_create_items/: up.sql
migrations/2020-04-15-074309_create_diary/: down.sql  up.sql
migrations/2020-04-16-020717_entry_userids/: down.sql  up.sql
migrations/2020-04-17-121842_overhaul_tables/: down.sql  up.sql
migrations/2020-04-19-043614_fix_nullable/: down.sql  up.sql
migrations/2020-04-19-051607_remove_foods_description/: down.sql  up.sql
migrations/2020-04-19-055933_add_entries_table/: down.sql  up.sql
migrations/2020-04-20-063301_create_tables/: down.sql  up.sql
migrations/2020-05-31-111658_create_schema/: down.sql  up.sql
sass/: fod.scss
server/: Cargo.toml
server/src/: lib.rs  models.rs  routes.rs  schema.rs
server/src/models/: entry.rs  food.rs  meal.rs  meal_type.rs  mod.rs  user.rs
server/src/routes/: auth.rs  entries.rs  foods.rs  meal_types.rs  mod.rs
sleep/: Cargo.toml
src/: main.rs  models.rs  routes.rs  schema.rs
src/auth/: mod.rs
src/auth/routes/: context.rs  mod.rs
src/models/: entries.rs  foods.rs  item.rs  meals.rs  mealtypes.rs  mod.rs  sleep_entries.rs  sleepentries.rs  user.rs
src/models/entries/: entry.rs  exercise.rs  meal.rs  meta.rs  meta_entry.rs  mod.rs  sleep.rs  sleep_entry.rs
src/models/exercise_entries/: exercise_types.rs  mod.rs
src/models/exerciseentries/: exercisetypes.rs  mod.rs
src/models/meal_entries/: foods.rs  meals.rs  mealtypes.rs  mod.rs
src/models/mealentries/: foods.rs  meals.rs  mod.rs
src/models/misc/: food.rs  meal.rs  mod.rs
src/models/types/: exercise.rs  meal.rs  mod.rs
src/routes/: app.rs  context.rs  errors.rs  mod.rs
src/routes/forms/: mod.rs
src/routes/index/: context.rs  mod.rs
src/users/: mod.rs  models.rs
src/users/routes/: mod.rs
templates/: base.html.tera  index.html.tera  login.html.tera  metrics.html.tera  nav.html.tera
templates/snippets/: confirm_delete.html.tera  foods.html.tera  hunger.html.tera  meal.html.tera  nav.html.tera  new_meal.html.tera
templates/snippets/entries/: exercise.html.tera  meal.html.tera  sleep.html.tera
templates/snippets/exercise/: exercise.html.tera  exercise_types.html.tera  new_exercise.html.tera
templates/snippets/meal/: meal_types.html.tera  new_meal.html.tera
templates/snippets/new_entry/: exercise.html.tera  meal.html.tera  (+1 more)
(+18 files in other folders)
