[package]
name = "fodmap"
version = "0.1.0"
authors = ["Hayden Hughes <hayden@vulpes.chickenkiller.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["tera_templates", "diesel_postgres_pool"] }
rocket_codegen = "0.4.2"
diesel = { version = "1.4.3", features = ["postgres"] }
serde = { version = "1.0.104", features = ["derive"] }
bcrypt = "0.6.1"
clap = "2.33.0"
dotenv = "0.15.0"
rpassword = "4.0.5"
