[package]
name = "fodmap"
version = "0.1.0"
authors = ["Hayden Hughes <hayden@vulpes.chickenkiller.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.1"
tokio = { version = "0.2.11", features = ["macros"] }
diesel = { version = "1.4.3", features = ["postgres"] }
serde = { version = "1.0.104", features = ["derive"] }
bcrypt = "0.6.1"
clap = "2.33.0"
dotenv = "0.15.0"
rpassword = "4.0.5"
tera = "1.0.2"
