[package]
name = "fodmap_common"
version = "0.1.0"
authors = ["Hayden Hughes <hayden@foxes.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
serde = { version = "1.0.111", features = ["derive"] }
