[package]
name = "fodmap_server"
version = "0.1.0"
authors = ["Hayden Hughes <hayden@foxes.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
rust-argon2 = "0.8.2"
rocket = "0.4.5"
getrandom = "0.1.14"
log = "0.4.8"
fodmap_common = { path = "../common" }
chrono = "0.4.11"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_postgres_pool", "json"]
